--- a/stripe-clone/public/manifest.json
+++ b/stripe-clone/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Stripe Clone",
+  "name": "Stripe Clone in React",
   "icons": [
     {
       "src": "favicon.ico",
